--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
   global:
   - GH_REF: github.com/chad-autry/wac-nginx
 script:
-- docker build -t chadautry/minecraft-server-container:latest .
+- docker build -t chadautry/wac-nginx:latest .
 - if [[ ! -z "$TRAVIS_TAG" ]]; then docker tag chadautry/wac-nginx:latest chadautry/wac-nginx:$TRAVIS_TAG ; fi
 after_success:
 - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
