--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wac-nginx",
   "version": "0.0.1",
-  "description": "A docker minecraft server container",
+  "description": "A docker nginx container",
   "repository": {
     "type": "git",
     "url": "https://github.com/chad-autry/wac-nginx.git"
